# agentflow

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
agent_tuner/: codex.yaml
agentflow/: __init__.py  app.py  cli.py  context.py  defaults.py  dsl.py  fanout.py  graph_optimization_session.py  graph_optimizer.py  inspection.py  launch_artifacts.py  loader.py  local_shell.py  node_executor.py  orchestrator.py  periodic.py  periodic_scheduler.py  pipeline_defaults.py  pipeline_validation.py  prepared.py  provider.py  run_lifecycle.py  run_state.py  runner.py  runtime_state.py  scratchboard_manager.py  specs.py  specs_core.py  specs_models.py  store.py  traces.py  tuned_agents.py  worktree_manager.py
docs/: README.md  examples.md
examples/: airflow_like.py  airflow_like_fuzz_batched.py  airflow_like_fuzz_grouped.py  code_review.py  dep_audit.py  graph_optimization_rounds.py  iterative_impl.py  multi_agent_debate.py  pi_local_lmstudio.py  release_check.py  repo_sweep_batched.py  test_gap.py
plan/: server-web-frontend-revamp-plan.md
scripts/: smoke_graph_optimization_rounds.sh  verify_tuned_codex_workflow.sh
tests/: test_async_boundaries.py  test_cli_run_streaming.py  test_cli_show.py  test_execution_runtime.py  test_fanout.py  test_graph_optimizer.py  test_launch_artifacts.py  test_node_runtime_state.py  test_orchestrator_resume.py  test_orchestrator_scheduling.py  test_orchestrator_worktree.py  test_periodic.py  test_periodic_scheduler.py  test_pipeline_payload_transform.py  test_pipeline_runtime_validation.py  test_scratchboard_manager.py  (+6 more)
(+75 files in other folders)
