[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "agentflow"
version = "0.1.0"
description = "Parallel and DAG orchestration for Codex, Claude, Pi, and Gaia agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OpenAI Codex CLI" }]
dependencies = [
  "jinja2>=3.1.6",
  "pydantic>=2.11.0",
  "PyYAML>=6.0.2",
  "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
]

[project.scripts]
agentflow = "agentflow.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["agentflow"]

[tool.hatch.build.targets.wheel.force-include]
"examples" = "examples"

[tool.pytest.ini_options]
testpaths = ["tests"]
